tests/errors/phpdoc_types.php
<?php

declare(strict_types=1);

/**
 *
 * @param inT $a
 * @param String $b
 */
function hello($a, $b): void
{
}
